Unbreak completion on tab-out.

KLineEdit no longer emits textEdited signal when scrolling completion
list (see commit 8db60a2f) then use textChanged as in the past.
BUG: 277457
FIXED-IN: 4.7.1